[Gold V] Title: AC, Time: 1604 ms, Memory: 84756 KB -BaekjoonHub